<resources>
    <string name="app_name">Calculator</string>
    <string name="buttonNumber7">7</string>
    <string name="buttonNumber8">8</string>
    <string name="buttonNumber9">9</string>
    <string name="buttonNumber4">4</string>
    <string name="buttonNumber5">5</string>
    <string name="buttonNumber6">6</string>
    <string name="buttonNumber1">1</string>
    <string name="buttonNumber2">2</string>
    <string name="buttonNumber3">3</string>
    <string name="buttonDot">.</string>
    <string name="buttonNumber0">0</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonEquals">=</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonAC">AC</string>
    <string name="editText"> </string>
    <string name="TextView"> </string>
    <string name="editTextForOperand"> </string>
</resources>